# omniviv

./: .gitignore  CLAUDE.md  Issues.md  README.md  build.yaml  issues.md  live-vehicles.md
.github/workflows/: docker-build.yml
api/: Cargo.toml  Dockerfile  config.yaml  openapi.json
api/src/: config.rs  main.rs
api/src/api/: health.rs  mod.rs  ws.rs
api/src/api/departures/: list.rs  mod.rs
api/src/api/vehicles/: list.rs  mod.rs
api/src/providers/timetables/germany/: bavaria.rs
api/src/providers/timetables/gtfs/: error.rs  mod.rs  realtime.rs  static_data.rs
api/src/sync/: issues.rs  mod.rs  types.rs
deployment/: .gitignore  docker-compose.yaml  mows-manifest.yaml
deployment/scripts/: generate-tiles.sh
deployment/templates/: docker-compose.yaml
deployment/values/: development.yaml
dev/: docker-compose.yml  generate-bavaria-planetiler.sh
docs/: README.md  api.md  architecture.md  deployment.md  development.md  releasing.md
maptiler/: config.json  docker-compose.yml
server/: Cargo.toml  EFA_API_DOCUMENTATION.md  openapi.json  tram-position-tracking-plan.md
server/src/: main.rs  sync.rs
server/src/api/: mod.rs  ws.rs
server/src/api/departures/: list.rs
server/src/api/lines/: geometries.rs  list.rs  mod.rs
server/src/api/stations/: list.rs  mod.rs  stop_events.rs
server/src/api/system/: debug.rs  info.rs  mod.rs
server/src/api/vehicles/: list.rs  mod.rs  position_estimates.rs
server/src/models/: mod.rs  vehicle.rs
server/src/providers/: efa.rs
server/src/services/: efa.rs  metrics.rs  mod.rs  osm.rs  vehicle_list.rs
web/: CLAUDE.md  Dockerfile  LIVE_TRAM_README.md  docker-compose.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: config.json
web/server/: config.yml
web/src/: App.tsx  api.ts  index.css
web/src/components/: BackendDiagnosticsPanel.tsx  FeaturesPanel.tsx  IssuesPanel.tsx  Map.tsx  NavigationPanel.tsx  PlatformPopup.tsx  StationPopup.tsx  SystemInfo.tsx  TimeControlPanel.tsx  (+3 more)
(+26 files in other folders)
