[package]
name = "omniviv-api"
version = "0.2.0"
edition = "2021"

[features]
default = []
dev-tools = ["dep:axum-sql-viewer", "dep:tracing-web-console"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "fs",
    "compression-full",
] }

# API documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum-sql-viewer = { version = "0.1.5", optional = true }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-web-console = { version = "0.2", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
futures = "0.3.31"
urlencoding = "2.1.3"
uuid = { version = "1", features = ["v4"] }
